Add basic HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,21 @@
     <title>Todo List</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">ToDo List</div>
+    </header>
+    <main>
+        <div class="selection-panel"></div>
+        <div class="todo-panel"></div>
+    </main>
+    <footer>
+        <div class="author">
+            <a id="gh-link" href="https://github.com/perugi">
+                <div>Made by</div>
+                <img id="gh-logo" src="img/githublogo.png">
+                <div>Dominik Perusko</div>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
