--- a/src/index.html
+++ b/src/index.html
@@ -7,29 +7,36 @@
 </head>
 <body>
     <header>
-        <div class="header">ToDo List</div>
+        <div id="header">ToDo List</div>
     </header>
     <main>
-        <div class="selection-panel">
-            <div class="static-selection">
+        <div id="selection-panel">
+            <div id="static-selection">
                 <ul>
-                    <li class="inbox">Inbox</li>
-                    <li class="today">Today</li>
-                    <li class="this-week">This Week</li>
+                    <li id="inbox">Inbox</li>
+                    <li id="today">Today</li>
+                    <li id="this-week">This Week</li>
                 </ul>
             </div>  
-            <div class="user-projects">
+            <div id="user-projects">
                 <ul>
                 </ul>
             </div>
-            <button class="add-project">Add Project</button>
+            <input id="new-project-name" type="text" placeholder="Project Name">
+            <button id="add-project">Add Project</button>
         </div>
-        <div class="todo-panel">
-            <div class="todo-list">
-                <ul>
-                </ul>
+        <div id="todo-panel">
+            <div id="todo-list">
             </div>
-            <button class="add-todo">Add Todo</button>
+            <div id="new-todo">
+                <input id="new-todo-name" type="text" placeholder="Name">
+                <textarea id="new-todo-description" placeholder="Description"></textarea>
+                <input id="new-todo-date" type="date">
+                <label for="new-todo-priority">Priority:</label>
+                <select id="new-todo-priority">
+                </select>
+                <button id="add-todo">Add Todo</button>
+            </div>
         </div>
     </main>
     <footer>
