Render the project and todo forms in javascript

--- a/src/index.html
+++ b/src/index.html
@@ -22,20 +22,12 @@
                 <ul>
                 </ul>
             </div>
-            <input id="new-project-name" type="text" placeholder="Project Name">
-            <button id="add-project">Add Project</button>
+            <div id="new-project"></div>
         </div>
         <div id="todo-panel">
             <div id="todo-list">
             </div>
             <div id="new-todo">
-                <input id="new-todo-name" type="text" placeholder="Name">
-                <textarea id="new-todo-description" placeholder="Description"></textarea>
-                <input id="new-todo-date" type="date">
-                <label for="new-todo-priority">Priority:</label>
-                <select id="new-todo-priority">
-                </select>
-                <button id="add-todo">Add Todo</button>
             </div>
         </div>
     </main>
