Move location of the new project button

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,14 @@
                     <li id="this-week">This Week</li>
                 </ul>
             </div>  
+            <div id="my-projects">
+                <div>My Projects</div>
+                <div id="new-project"></div>
+            </div>
             <div id="user-projects">
                 <ul>
                 </ul>
             </div>
-            <div id="new-project"></div>
         </div>
         <div id="todo-panel">
             <div id="todo-list">
