Add edit project modal

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
             <input type="button" value="Create Project" id="create-project-button">
         </div>
     </div>
+    <div id="edit-project-modal">
+        <div class="modal-content">
+            <div>Edit</div>
+            <div id="close-edit-project-modal" class="close-modal">&times;</div>
+            <div>
+                <label for="edit-project-name"><span class="modal-label">Project Name:</span></label>
+                <input type="text" id="edit-project-name" class="modal-input">
+            </div>
+            <div id="edit-project-button-div">
+            </div>
+        </div>
+    </div>
     <div id="add-todo-modal">
         <div class="modal-content">
             <div>Add Todo</div>
