In today and this week view, split the todos by project

--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,8 @@
             </div>
         </div>
         <div id="todo-panel">
-            <div id="todo-list">
-            </div>
+            <div id="view-name"></div>
+            <div id="todo-list"></div>
             <div id="new-todo">
                 <button id="new-todo-button">+</button>
             </div>
