Add Local Storage add/remove/edit functions

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,9 @@
         <div class="modal-content">
             <div>Edit Todo</div>
             <div id="close-edit-todo-modal" class="close-modal">&times;</div>
+            <div label for="edit-todo-completed"><span class="modal-label">Completed:</span></label>
+                <input type="checkbox" id="edit-todo-completed" class="modal-input">
+            </div>
             <div>
                 <label for="edit-todo-title"><span class="modal-label">Title:</span></label>
                 <input type="text" id="edit-todo-title" class="modal-input">
