--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,7 @@
         </div>
         <div id="todo-panel">
             <div id="view-name"></div>
+            <div id="project-index" display="none" data-index="0"></div>
             <div id="todo-list"></div>
             <div id="new-todo">
                 <button id="new-todo-button">+</button>
