--- a/src/index.html
+++ b/src/index.html
@@ -6,121 +6,139 @@
     <title>Todo List</title>
 </head>
 <body>
-    <div id="new-project-modal">
-        <div class="modal-content">
-            <div>New Project</div>
-            <div id="close-project-modal" class="close-modal">&times;</div>
-            <div>
-                <label for="new-project-name"><span class="modal-label">Project Name:</span></label>
-                <input type="text" id="new-project-name" class="modal-input">
+    <div id="modals">
+        <div id="new-project-modal">
+            <div class="modal-content">
+                <div>New Project</div>
+                <div id="close-project-modal" class="close-modal">&times;</div>
+                <div>
+                    <label for="new-project-name"><span class="modal-label">Project Name:</span></label>
+                    <input type="text" id="new-project-name" class="modal-input">
+                </div>
+                <input type="button" value="Create Project" id="confirm-new-project-button">
             </div>
-            <input type="button" value="Create Project" id="create-project-button">
+        </div>
+        <div id="edit-project-modal">
+            <div class="modal-content">
+                <div>Edit Project</div>
+                <div id="close-edit-project-modal" class="close-modal">&times;</div>
+                <div>
+                    <label for="edit-project-name"><span class="modal-label">Project Name:</span></label>
+                    <input type="text" id="edit-project-name" class="modal-input">
+                </div>
+                <button id="confirm-edit-project-button" data-project-index="">Confirm</button>
+            </div>
+        </div>
+        <div id="delete-project-modal">
+            <div class="modal-content">
+                <div>Delete Project</div>
+                <div>Are you sure you want to delete the project '<span id="delete-project-name"></span>'?</div>
+                <div id="close-delete-project-modal" class="close-modal">&times;</div>
+                <button id="confirm-delete-project-button" data-project-index="">Confirm</button>
+            </div>
+        </div>
+        <div id="add-todo-modal">
+            <div class="modal-content">
+                <div>Add Todo</div>
+                <div id="close-todo-modal" class="close-modal">&times;</div>
+                <div>
+                    <label for="add-todo-project-name"><span class="modal-label">Project:</span></label>
+                    <div id="add-todo-project-name"></div>
+                </div>
+                <div>
+                    <label for="new-todo-title"><span class="modal-label">Title:</span></label>
+                    <input type="text" id="new-todo-title" class="modal-input">
+                </div>
+                <div>
+                    <label for="new-todo-description"><span class="modal-label">Description:</span></label>
+                    <textarea id="new-todo-description" class="modal-input"></textarea>
+                </div>
+                <div>
+                    <label for="new-todo-date"><span class="modal-label">Due Date:</span></label>
+                    <input type="date" id="new-todo-date" class="modal-input">
+                </div>
+                <div>
+                    <label for="new-todo-priority"><span class="modal-label">Priority:</span></label>
+                    <select id="new-todo-priority" class="modal-input">
+                        <option value="LOW">Low</option>
+                        <option value="MEDIUM">Medium</option>
+                        <option value="HIGH">High</option>
+                    </select>
+                </div>
+                <input type="button" value="Add Todo" id="confirm-add-todo-button" data-project-index="">
+            </div>
+        </div>
+        <div id="edit-todo-modal">
+            <div class="modal-content">
+                <div>Edit Todo</div>
+                <div id="close-edit-todo-modal" class="close-modal">&times;</div>
+                <div>
+                    <label for="edit-todo-project-name"><span class="modal-label">Project:</span></label>
+                    <div id="edit-todo-project-name"></div>
+                </div>
+                <div>
+                    <label for="edit-todo-completed"><span class="modal-label">Completed:</span></label>
+                    <input type="checkbox" id="edit-todo-completed" class="modal-input">
+                </div>
+                <div>
+                    <label for="edit-todo-title"><span class="modal-label">Title:</span></label>
+                    <input type="text" id="edit-todo-title" class="modal-input">
+                </div>
+                <div>
+                    <label for="edit-todo-description"><span class="modal-label">Description:</span></label>
+                    <textarea id="edit-todo-description" class="modal-input"></textarea>
+                </div>
+                <div>
+                    <label for="edit-todo-date"><span class="modal-label">Due Date:</span></label>
+                    <input type="date" id="edit-todo-date" class="modal-input">
+                </div>
+                <div>
+                    <label for="edit-todo-priority"><span class="modal-label">Priority:</span></label>
+                    <select id="edit-todo-priority" class="modal-input">
+                        <option value="LOW">Low</option>
+                        <option value="MEDIUM">Medium</option>
+                        <option value="HIGH">High</option>
+                    </select>
+                </div>
+                <input type="button" value="Edit Todo" id="confirm-edit-todo-button" data-project-index="" data-todo-index="">
+            </div>
         </div>
     </div>
-    <div id="edit-project-modal">
-        <div class="modal-content">
-            <div>Edit</div>
-            <div id="close-edit-project-modal" class="close-modal">&times;</div>
-            <div>
-                <label for="edit-project-name"><span class="modal-label">Project Name:</span></label>
-                <input type="text" id="edit-project-name" class="modal-input">
+    <div id="content">
+        <header>
+            <img id="logo">
+            <div id="title">todo</div>
+        </header>
+        <main>
+            <div id="selection-panel">
+                <div id="static-selection">
+                    <div id="inbox">Inbox</div>
+                    <div id="today">Today</div>
+                    <div id="this-week">This Week</div>
+                </div>  
+                <div id="my-projects">
+                    <div>My Projects</div>
+                    <div id="new-project-button">+</div>
+                </div>
+                <div id="user-projects">
+                    <ul>
+                    </ul>
+                </div>
             </div>
-            <div id="edit-project-button-div">
+            <div id="todo-panel">
+                <div id="view-name"></div>
+                <div id="todo-list"></div>
             </div>
-        </div>
+        </main>
+        <footer>
+            <div class="author">
+                <a id="gh-link" href="https://github.com/perugi">
+                    <div>Made by</div>
+                    <img id="gh-logo">
+                    <div>Dominik Perusko</div>
+                </a>
+            </div>
+        </footer>
     </div>
-    <div id="add-todo-modal">
-        <div class="modal-content">
-            <div>Add Todo</div>
-            <div id="close-todo-modal" class="close-modal">&times;</div>
-            <div>
-                <label for="new-todo-title"><span class="modal-label">Title:</span></label>
-                <input type="text" id="new-todo-title" class="modal-input">
-            </div>
-            <div>
-                <label for="new-todo-description"><span class="modal-label">Description:</span></label>
-                <textarea id="new-todo-description" class="modal-input"></textarea>
-            </div>
-            <div>
-                <label for="new-todo-date"><span class="modal-label">Due Date:</span></label>
-                <input type="date" id="new-todo-date" class="modal-input">
-            </div>
-            <div>
-                <label for="new-todo-priority"><span class="modal-label">Priority:</span></label>
-                <select id="new-todo-priority" class="modal-input">
-                    <option value="LOW">Low</option>
-                    <option value="MEDIUM">Medium</option>
-                    <option value="HIGH">High</option>
-                </select>
-            </div>
-            <input type="button" value="Add Todo" id="confirm-add-todo-button" data-project-index="">
-        </div>
-    </div>
-    <div id="edit-todo-modal">
-        <div class="modal-content">
-            <div>Edit Todo</div>
-            <div id="close-edit-todo-modal" class="close-modal">&times;</div>
-            <div>
-                <label for="edit-todo-completed"><span class="modal-label">Completed:</span></label>
-                <input type="checkbox" id="edit-todo-completed" class="modal-input">
-            </div>
-            <div>
-                <label for="edit-todo-title"><span class="modal-label">Title:</span></label>
-                <input type="text" id="edit-todo-title" class="modal-input">
-            </div>
-            <div>
-                <label for="edit-todo-description"><span class="modal-label">Description:</span></label>
-                <textarea id="edit-todo-description" class="modal-input"></textarea>
-            </div>
-            <div>
-                <label for="edit-todo-date"><span class="modal-label">Due Date:</span></label>
-                <input type="date" id="edit-todo-date" class="modal-input">
-            </div>
-            <div>
-                <label for="edit-todo-priority"><span class="modal-label">Priority:</span></label>
-                <select id="edit-todo-priority" class="modal-input">
-                    <option value="LOW">Low</option>
-                    <option value="MEDIUM">Medium</option>
-                    <option value="HIGH">High</option>
-                </select>
-            </div>
-            <input type="button" value="Edit Todo" id="confirm-edit-todo-button" data-project-index="" data-todo-index="">
-        </div>
-    </div>
-    <header>
-        <div id="header">Todo List</div>
-    </header>
-    <main>
-        <div id="selection-panel">
-            <div id="static-selection">
-                <ul>
-                    <li id="inbox">Inbox</li>
-                    <li id="today">Today</li>
-                    <li id="this-week">This Week</li>
-                </ul>
-            </div>  
-            <div id="my-projects">
-                <div>My Projects</div>
-                <div id="new-project"><button id="new-project-button">+</button></div>
-            </div>
-            <div id="user-projects">
-                <ul>
-                </ul>
-            </div>
-        </div>
-        <div id="todo-panel">
-            <div id="view-name"></div>
-            <div id="todo-list"></div>
-        </div>
-    </main>
-    <footer>
-        <div class="author">
-            <a id="gh-link" href="https://github.com/perugi">
-                <div>Made by</div>
-                <img id="gh-logo">
-                <div>Dominik Perusko</div>
-            </a>
-        </div>
-    </footer>
 </body>
 </html>
