Add project name identifiers to modals where needed

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
                 <div>New Project</div>
                 <div id="close-project-modal" class="close-modal">&times;</div>
                 <div>
-                    <label for="new-project-name"><span class="modal-label">Project Name:</span></label>
+                    <label for="new-project-name" class="modal-label">Project Name:</label>
                     <input type="text" id="new-project-name" class="modal-input">
                 </div>
                 <input type="button" value="Create Project" id="confirm-new-project-button">
@@ -23,7 +23,7 @@
                 <div>Edit Project</div>
                 <div id="close-edit-project-modal" class="close-modal">&times;</div>
                 <div>
-                    <label for="edit-project-name"><span class="modal-label">Project Name:</span></label>
+                    <label for="edit-project-name" class="modal-label">Project Name:</label>
                     <input type="text" id="edit-project-name" class="modal-input">
                 </div>
                 <button id="confirm-edit-project-button" data-project-index="">Confirm</button>
@@ -42,23 +42,23 @@
                 <div>Add Todo</div>
                 <div id="close-todo-modal" class="close-modal">&times;</div>
                 <div>
-                    <label for="add-todo-project-name"><span class="modal-label">Project:</span></label>
+                    <label for="add-todo-project-name" class="modal-label">Project:</label>
                     <div id="add-todo-project-name"></div>
                 </div>
                 <div>
-                    <label for="new-todo-title"><span class="modal-label">Title:</span></label>
+                    <label for="new-todo-title" class="modal-label">Title:</label>
                     <input type="text" id="new-todo-title" class="modal-input">
                 </div>
                 <div>
-                    <label for="new-todo-description"><span class="modal-label">Description:</span></label>
+                    <label for="new-todo-description" class="modal-label">Description:</label>
                     <textarea id="new-todo-description" class="modal-input"></textarea>
                 </div>
                 <div>
-                    <label for="new-todo-date"><span class="modal-label">Due Date:</span></label>
+                    <label for="new-todo-date" class="modal-label">Due Date:</label>
                     <input type="date" id="new-todo-date" class="modal-input">
                 </div>
                 <div>
-                    <label for="new-todo-priority"><span class="modal-label">Priority:</span></label>
+                    <label for="new-todo-priority" class="modal-label">Priority:</label>
                     <select id="new-todo-priority" class="modal-input">
                         <option value="LOW">Low</option>
                         <option value="MEDIUM">Medium</option>
@@ -73,27 +73,27 @@
                 <div>Edit Todo</div>
                 <div id="close-edit-todo-modal" class="close-modal">&times;</div>
                 <div>
-                    <label for="edit-todo-project-name"><span class="modal-label">Project:</span></label>
+                    <label for="edit-todo-project-name" class="modal-label">Project:</label>
                     <div id="edit-todo-project-name"></div>
                 </div>
                 <div>
-                    <label for="edit-todo-completed"><span class="modal-label">Completed:</span></label>
+                    <label for="edit-todo-completed" class="modal-label">Completed:</label>
                     <input type="checkbox" id="edit-todo-completed" class="modal-input">
                 </div>
                 <div>
-                    <label for="edit-todo-title"><span class="modal-label">Title:</span></label>
+                    <label for="edit-todo-title" class="modal-label">Title:</label>
                     <input type="text" id="edit-todo-title" class="modal-input">
                 </div>
                 <div>
-                    <label for="edit-todo-description"><span class="modal-label">Description:</span></label>
+                    <label for="edit-todo-description" class="modal-label">Description:</label>
                     <textarea id="edit-todo-description" class="modal-input"></textarea>
                 </div>
                 <div>
-                    <label for="edit-todo-date"><span class="modal-label">Due Date:</span></label>
+                    <label for="edit-todo-date" class="modal-label">Due Date:</label>
                     <input type="date" id="edit-todo-date" class="modal-input">
                 </div>
                 <div>
-                    <label for="edit-todo-priority"><span class="modal-label">Priority:</span></label>
+                    <label for="edit-todo-priority" class="modal-label">Priority:</label>
                     <select id="edit-todo-priority" class="modal-input">
                         <option value="LOW">Low</option>
                         <option value="MEDIUM">Medium</option>
