Change the render functions to and ES6 class

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                         <option value="HIGH">High</option>
                     </select>
                 </div>
-                <input type="button" value="Add Todo" id="confirm-add-todo-button" data-project-index="">
+                <input type="button" value="Confirm" id="confirm-add-todo-button" data-project-index="">
             </div>
         </div>
         <div id="edit-todo-modal">
@@ -100,7 +100,7 @@
                         <option value="HIGH">High</option>
                     </select>
                 </div>
-                <input type="button" value="Edit Todo" id="confirm-edit-todo-button" data-project-index="" data-todo-index="">
+                <input type="button" value="Confirm" id="confirm-edit-todo-button" data-project-index="" data-todo-index="">
             </div>
         </div>
     </div>
