Change the way project indexes are used for identifying the project during deletion and edit

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <label for="edit-project-name" class="modal-label">Project Name:</label>
                     <input type="text" id="edit-project-name" class="modal-input">
                 </div>
-                <button id="confirm-edit-project-button" data-project-index="">Confirm</button>
+                <button id="confirm-edit-project-button">Confirm</button>
             </div>
         </div>
         <div id="delete-project-modal">
@@ -34,7 +34,7 @@
                 <div>Delete Project</div>
                 <div>Are you sure you want to delete the project '<span id="delete-project-name"></span>'?</div>
                 <div id="close-delete-project-modal" class="close-modal">&times;</div>
-                <button id="confirm-delete-project-button" data-project-index="">Confirm</button>
+                <button id="confirm-delete-project-button">Confirm</button>
             </div>
         </div>
         <div id="add-todo-modal">
@@ -65,7 +65,7 @@
                         <option value="HIGH">High</option>
                     </select>
                 </div>
-                <input type="button" value="Confirm" id="confirm-add-todo-button" data-project-index="">
+                <input type="button" value="Confirm" id="confirm-add-todo-button">
             </div>
         </div>
         <div id="edit-todo-modal">
@@ -100,7 +100,7 @@
                         <option value="HIGH">High</option>
                     </select>
                 </div>
-                <input type="button" value="Confirm" id="confirm-edit-todo-button" data-project-index="" data-todo-index="">
+                <input type="button" value="Confirm" id="confirm-edit-todo-button">
             </div>
         </div>
     </div>
