Style the todo panel

--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,11 @@
                     </ul>
                 </div>
             </div>
-            <div id="todo-panel">
-                <div id="view-name"></div>
-                <div id="todo-list"></div>
+            <div id="todo-panel-container">
+                <div id="todo-panel">
+                    <div id="view-name"></div>
+                    <div id="todo-list"></div>
+                </div>
             </div>
         </main>
         <footer>
